crux-mir-comp/test/symb_eval/comp/alias_array_ok.good
test alias_array_ok/3a1fbbbh::f_test[0]: ok
test alias_array_ok/3a1fbbbh::use_f[0]: FAILED

failures:

---- alias_array_ok/3a1fbbbh::use_f[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./lib/crucible/lib.rs:37:41: 37:58 !test/symb_eval/comp/alias_array_ok.rs:48:5: 48:39: error: in alias_array_ok/3a1fbbbh::use_f[0]
[Crux]   MIR assertion at test/symb_eval/comp/alias_array_ok.rs:48:5:
[Crux]   	b[0].get() < 10

[Crux] Overall status: Invalid.
